--- a/swarm/docker-compose-services.yml
+++ b/swarm/docker-compose-services.yml
@@ -11,6 +11,8 @@ services:
       SPARK_SUBMIT_OPTIONS: ""
     env_file:
       - ./hadoop.env
+    ports:
+    - "8091:8088"
     deploy:
       replicas: 1
       mode: replicated
@@ -24,6 +26,8 @@ services:
 
   hue:
     image: bde2020/hdfs-filebrowser:3.11
+    ports:
+    - "8092:8088"
     deploy:
       replicas: 1
       mode: replicated
