--- a/swarm/docker-compose-spark.yml
+++ b/swarm/docker-compose-spark.yml
@@ -2,6 +2,9 @@ version: '3'
 services:
   spark-master:
     image: bde2020/spark-master:2.2.0-hadoop2.8-hive-java8
+    ports:
+    - "8090:8080"
+    - "7077:7077"
     networks:
       - workbench
     deploy:
