--- a/swarm/docker-compose-spark.yml
+++ b/swarm/docker-compose-spark.yml
@@ -20,7 +20,7 @@ services:
       - ./hadoop.env
 
   spark-worker:
-    image: bde2020/spark-master:2.3.2-hadoop2.7
+    image: bde2020/spark-worker:2.3.2-hadoop2.7
     networks:
       - workbench
     environment:
