--- a/swarm/docker-compose-spark.yml
+++ b/swarm/docker-compose-spark.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   spark-master:
-    image: bde2020/spark-master:2.3.2-hadoop2.7
+    image: bde2020/spark-master:2.2.0-hadoop2.8-hive-java8
     ports:
     - "6066:6066"
     - "8090:8080"
@@ -21,7 +21,7 @@ services:
       - ./hadoop.env
 
   spark-worker:
-    image: bde2020/spark-worker:2.3.2-hadoop2.7
+    image: bde2020/spark-worker:2.2.0-hadoop2.8-hive-java8
     networks:
       - workbench
     environment:
