--- a/swarm/docker-compose-hadoop.yml
+++ b/swarm/docker-compose-hadoop.yml
@@ -4,6 +4,7 @@ services:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     ports:
     - "50070:50070"
+    - "9000:9000"
     networks:
       - workbench
     volumes:
@@ -24,6 +25,7 @@ services:
       labels:
         traefik.docker.network: workbench
         traefik.port: 50070
+        traefik.port: 9000
 
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
@@ -45,6 +47,7 @@ services:
       labels:
         traefik.docker.network: workbench
         traefik.port: 50075
+        traefik.port: 50010
 
 volumes:
   datanode:
