--- a/swarm/docker-compose-spark.yml
+++ b/swarm/docker-compose-spark.yml
@@ -22,6 +22,8 @@ services:
 
   spark-worker:
     image: bde2020/spark-worker:2.4.0-hadoop2.7
+    ports:
+    - "8091:8081"
     networks:
       - workbench
     environment:
