Setup gottit/jupyter-py27 and remove ports
expose is irrrelevant as all ports are exposed within the network

--- a/swarm/docker-compose-services.yml
+++ b/swarm/docker-compose-services.yml
@@ -18,7 +18,7 @@ services:
       - workbench
 
   datascience-notebook:
-    image: jup:2.7
+    image: gottit/jupyter-py27
     volumes:
     - /home/jens/jupyter:/home/jovyan/work
     environment:
