--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - 50070:50070
       - 8020:8020
   datanode:
-    image: bde2020/hadoop-datanode:1.1.0-2.0.0-hadoop2.7.4-java8
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     depends_on: 
       - namenode
     volumes:
