--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,6 @@ services:
       - CLUSTER_NAME=test
     env_file:
       - ./hadoop.env
-    ports:
-      - 50070:50070
-      - 8020:8020
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     depends_on: 
@@ -20,14 +17,9 @@ services:
       - ./data/datanode:/hadoop/dfs/data
     env_file:
       - ./hadoop.env
-    ports:
-      - 50075:50075
   spark-master:
     image: bde2020/spark-master:2.4.0-hadoop2.7
     container_name: spark-master
-    ports:
-      - 8080:8080
-      - 7077:7077
     env_file:
       - ./hadoop.env
   spark-worker:
@@ -36,14 +28,10 @@ services:
       - spark-master
     environment:
       - SPARK_MASTER=spark://spark-master:7077
-    ports:
-      - 8081:8081
     env_file:
       - ./hadoop.env
   hue:
     image: bde2020/hdfs-filebrowser:3.11
-    ports:
-      - 8088:8088
     environment:
       - NAMENODE_HOST=namenode
   datascience-notebook:
@@ -51,9 +39,7 @@ services:
     container_name: spark-notebook
     env_file:
       - ./hadoop.env
-    ports:
-    - "8888:8888"
     volumes:
-    - /home/jens/jupyter:/home/jovyan/work
+    - ./data/jupyter:/home/jovyan/work
     environment:
       - SPARK_MASTER=spark://spark-master:7077
