Change placement and ports

--- a/swarm/docker-compose-hadoop.yml
+++ b/swarm/docker-compose-hadoop.yml
@@ -21,7 +21,7 @@ services:
       # add placement constraint to allocate namenode on particular server
       placement:
         constraints:
-          - node.role == manager:
+          - node.role == manager
       labels:
         traefik.docker.network: workbench
         traefik.port: 50070
