--- a/swarm/docker-compose-services.yml
+++ b/swarm/docker-compose-services.yml
@@ -3,10 +3,13 @@ services:
   hue:
     image: bde2020/hdfs-filebrowser:3.11
     ports:
-    - "8092:8088"
+    - "8088:8088"
     deploy:
       replicas: 1
       mode: replicated
+      placement:
+        constraints:
+          - node.role == manager
       restart_policy:
         condition: on-failure
       labels:
@@ -27,6 +30,9 @@ services:
     - "8888:8888"
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
       mode: replicated
       restart_policy:
         condition: on-failure
