--- a/swarm/docker-compose-spark.yml
+++ b/swarm/docker-compose-spark.yml
@@ -4,13 +4,16 @@ services:
     image: bde2020/spark-master:2.4.0-hadoop2.7
     ports:
     - "6066:6066"
-    - "8090:8080"
+    - "8080:8080"
     - "7077:7077"
     - "4040:4040"
     networks:
       - workbench
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
       mode: replicated
       restart_policy:
         condition: on-failure
@@ -23,13 +26,17 @@ services:
   spark-worker:
     image: bde2020/spark-worker:2.4.0-hadoop2.7
     ports:
-    - "8091:8081"
+    - "8081:8081"
     networks:
       - workbench
     environment:
       - SPARK_MASTER=spark://spark-master:7077
     deploy:
-      mode: global
+      mode: replicated
+      replicas: 10
+      placement:
+        constraints:
+          - node.role != manager
       restart_policy:
         condition: on-failure
       labels:
