--- a/spark-notebook/Dockerfile
+++ b/spark-notebook/Dockerfile
@@ -1,11 +1,12 @@
-FROM bde2020/hadoop-base:1.1.0-hadoop2.8-java8
+FROM bde2020/hadoop-base:2.0.0-hadoop2.7.4-java8
 MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
 
-ENV APACHE_SPARK_VERSION 2.1.1
-ENV APACHE_HADOOP_VERSION 2.8.0
+ENV APACHE_SPARK_VERSION 2.2.2
+ENV APACHE_HADOOP_VERSION 2.7.4
 
+# Update the tgz to latest based on http://s3.eu-central-1.amazonaws.com/spark-notebook
 RUN set -x \
-    && curl -fSL "https://s3.eu-central-1.amazonaws.com/spark-notebook/tgz/spark-notebook-0.7.0-scala-2.11.8-spark-2.1.1-hadoop-2.8.0-with-hive.tgz?max-keys=100000" -o /tmp/spark-notebook.tgz \
+    && curl -fSL "https://s3.eu-central-1.amazonaws.com/spark-notebook/tgz/spark-notebook-0.8.3-scala-2.11-spark-2.2.2-hadoop-2.7.3-with-hive.tgz?max-keys=100000" -o /tmp/spark-notebook.tgz \
     && tar -xzvf /tmp/spark-notebook.tgz -C /opt/ \
     && mv /opt/spark-notebook-* /opt/spark-notebook \
     && rm /tmp/spark-notebook.tgz
